# FitSNAP

./: .gitignore  HEADER  InP_metrics.csv  InP_pot.snapcoeff  README.md  Ta_metrics.csv  Ta_pot.snapcoeff  initilize_array.py  log.lammps  pyproject.toml  setup.cfg  test_mpi4py.py  tutorial-local.ipynb  tutorial.ipynb
.github/workflows/: draft-pdf.yml  linux_unittest.yaml  macos_unittest.yaml  pytests.yaml  python-package-conda.yml
doc/: Makefile  PARALLEL.md
doc/conf/: conf.py  examples_rst.py  fitsnap.ipynb  requirements.txt
doc/doctrees/: Contributing.doctree  Executable.doctree  Installation.doctree  Introduction.doctree  Linear.doctree  Pytorch.doctree  Quick.doctree  ReaxFF.doctree  Tests.doctree  environment.pickle  index.doctree
doc/html/: .buildinfo  Contributing.html  Executable.html  Installation.html  Introduction.html  Linear.html  Pytorch.html  Quick.html  ReaxFF.html  Tests.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/paper/: paper.bib
doc/src/: Installation.rst  Pytorch.rst  ReaxFF.rst  contributing.rst  examples.rst  executable.rst  index.rst  installation.rst  introduction.rst  linear.rst  parameters.html  parameters_css.html  pytorch.rst  quick.rst  reaxff.bib  reaxff.rst
docs/: FullOptions_SNAP.in  GROUPLIST.template  INSTALL.md  LAMMPS.md  Makefile  PARALLEL.md  README.md  TEMPLATE.in  TEMPLATE_uq.in  requirements.txt
docs/paper/: README.md  paper.bib  paper.md
docs/source/: Contributing.rst  Executable.rst  Installation.rst  Introduction.rst  Library.rst  Linear.rst  Pytorch.rst  Quick.rst  ReaxFF.rst  Run.rst  Tests.rst  Uncertainty Quantification.rst  conf.py  fairchem.rst  index.rst  pacemaker.rst  usage.rst
docs_old/: DEVELOPER.md  GROUPLIST.template  INSTALL.md
examples/Cu_ACE_sym/: Cu.in
examples/Dakota/: README  dakota_opt.in  exec_fitsnap.sh  par_exec_fitsnap.sh
examples/Fe_Linear_NPJ2021/: Fe-example.in
examples/Fe_Pytorch_NN/: Fe-example.in  README.md  plot_comparison.py  plot_energy_comparison.py  plot_error_vs_epochs.py  run.sh
examples/Fe_Quadratic_PRB/: Fe-example.in
examples/H2O/: H2O-example.in  README.md  plot_error_vs_epochs.py  plot_pas_comparison.py
examples/HF_ReaxFF/: HF_ReaxFF-acks2.in  HF_ReaxFF-bondscan.py  HF_ReaxFF-qeq.in  HF_ReaxFF.ipynb  HF_ReaxFF_acks2.ff  HF_ReaxFF_acks2e.ff  HF_ReaxFF_qeq.ff  reaxff-wood2014.ff
examples/InP_JCP2020/: InP-example.in  README.md  grouplist.in
examples/InP_JPCA2020/: InP-example.in  README.md
examples/InP_PACE/: InP-example.in  README.md
examples/InP_PACE_ARD/: InP_PACE_ARD.in
examples/InP_PYACE_SLATE_ARD/: InP_PYACE_SLATE_ARD.in
examples/InP_PYACE_SLATE_RIDGE/: InP_PYACE_RIDGE.in
examples/InP_VASP/: InP-example_json.in  InP-example_vasp.in  json_InP-example.in  vasp_InP-example.in  vasp_scraper_InP-example.in
examples/InP_VASP_scraper/: InP-example_vasp.in
examples/MSD-Fe/: Fe_pot_snappy.snapcoeff  Fe_pot_snappy.snapparam  in.lammps  pot.mod
examples/Ta_JAX_NN/: Ta-example.in
examples/Ta_JCP2014/: README  TaJCP2014_SNAP.in  grouplist.in
examples/Ta_Linear_JCP2014/: Descriptors.npy  README.md  Ta-example-nodump.in  Ta-example.in  Ta_metrics.md  Ta_pot.snapcoeff  Ta_pot_ata.snapcoeff  Truth-Ref.npy  Weights.npy  compare_snapcoeff.py  grouplist-Ta.in  log.lammps  output  plot.py  read_df.py  run.sh
examples/Ta_PACE/: README.md  Ta.in  Truth-Ref.npy  Weights.npy  auto_fit_this.py  cleanup.sh  environment.sh
fitsnap3/: README.md  README_uq.txt  __init__.py  __main__.py  bispecopt.py  deploy.py  fitsnap.py  fitsnap.py~  geometry.py  initialize.py  input_output.py  linearfit.py  parallel_output.py  parallel_tools.py  runlammps.py  scrape.py  serialize.py  template.in  units.py
fitsnap3/io/: input.py  (+1 more)
fitsnap3lib/: .fitsnap.py.swo  .parallel_tools.py.swo  README.md  fitsnap.py  initialize.py  parallel_output.py  parallel_tools.py
fitsnap3lib/lib/scalapack_solver/: README.md  __init__.py  pyproject.toml  scalapack.c  scalapack.h  scalapack.py  scalapack.pyx  scalapack_wrapper.py  setup.py
fitsnap3lib/lib/scalapack_solver/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
fitsnap3lib/lib/slate_solver/: README.md  __init__.py  pyproject.toml  setup.py  slate.cpp  slate_ridge.cpp  slate_wrapper.pyx
fitsnaprun/: __init__.py  __main__.py
reaxff/: reaxff-bai2012.ff  reaxff-hahn2018.ff  reaxff-han2010.ff  reaxff-kim2018.ff  reaxff-kowalik2019.ff  reaxff-kulkarni2013.ff  reaxff-liu2011.ff  reaxff-mayernick2010.ff  reaxff-mueller2016.ff  reaxff-narayanan2011.ff  reaxff-newsome2012.ff  reaxff-ostadhossein2016.ff  reaxff-ostadhossein2017.ff  reaxff-psofogiannakis2016.ff  reaxff-rajabpour2021b.ff  reaxff-srinivasan2015.ff  reaxff-vanduin2008.ff  reaxff-yeon2018.ff  reaxff-yeon2021.ff
src/: fitsnap.py
tests/: README.md  example_checker.py  test_examples.py  test_pytorch.py
tools/: DistOfEnergy_JSON.sh  HEADER  InOutRandom.sh  README  README.md  ShiftEnergy.sh  VASP2JSON.py  VASPxml2JSON.py  default_ACE_settings.py  diagonal_plots_plotting_tool.py  input_to_settings_dict.py  omat24.py  settings_dict_to_input.py  update_header.py  xml2xyz.py
(+31419 files in other folders)
