[metadata]
name = fitsnap3
version = 3.0.1
author = Drew Rohskopf
author_email = adrohsk@sandia.gov
description = Molecular Machine Learning Interface
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/rohskopf/FitSNAP/tree/package
project_urls =
    Bug Tracker = https://github.com/FitSNAP/FitSNAP/-/issues
    repository = https://github.com/rohskopf/FitSNAP/tree/package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = fitsnap3, fitsnap3lib
python_requires = >=3.6